cmake_minimum_required(VERSION 3.26)
project(folders7 C)

set(CMAKE_C_STANDARD 11)

add_executable(folders7 main.c
        bai1.c
        bai2.c
        bai3.c
        bai4.c
        bai5.c
        vd1.c
        vd2.c
        vd3.c
        vd4.c
        vd5.c
        vd6.c
        vd7.c
        vd8.c
        vd9.c
        vd10.c
)
